# celnav

./: .gitignore  README.md  download-assets.sh  verify-assets.sh
celnav-browser/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
celnav-browser/e2e/: rust-wasm.spec.ts  xaxero-local.spec.ts
celnav-browser/src/: smoke.test.ts
celnav-rs/: Cargo.toml  README.md  build-wasm.sh  wasm-smoke.html
celnav-rs/src/: lib.rs  main.rs
docs/: development-environment.md  development-status.md  index.md  reference-data.md
reference-python/: README.md  main.py  pyproject.toml  skyfield_reference.py
tools/: serve-static.mjs
