[package]
name = "celnav-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local SPK/BPC/TPC parsing only. ANISE's default `metaload` feature pulls native HTTP/TLS
# dependencies that do not compile for wasm32-unknown-unknown.
anise = { version = "0.10.3", default-features = false }
approx = "0.5.1"
hifitime = "4.3.0"
serde = "1.0.228"
serde_json = "1.0.150"
wasm-bindgen = "0.2.126"
