[project]
name = "celnav-reference"
version = "0.1.0"
description = "Skyfield/JPL reference generator for celestial-navigation test data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jplephem>=2.24",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "skyfield>=1.54",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
